# AI-ML-experements

./: .gitignore  README.md  Stage2.ipynb  benchmark_final.ipynb  pyproject.toml  rag_generative_and_finetune.ipynb
archive/: benchmark_final.ipynb
archive/Reranker+LLM_v1/: benchmark_final.ipynb  h100_benchmark_results (2).csv
archive/reranker_refinment_v1/: benchmark_final (1).ipynb
archive/src/: benchmark.py  benchmark_stable.py  data_loader.py  main.py
archive/src/insurance_rag_qdrant.egg-info/: SOURCES.txt  requires.txt
archive/together/: h100_benchmark_results_v2.csv
benchmark_results/Reranker+LLM_v1/: benchmark_final.ipynb  generative_comparison_results.csv
benchmark_results/Reranker+LLM_v1/checkpoint/model/runs/Jan21_05-55-52_953b9c9d5978/: events.out.tfevents.1768974953.953b9c9d5978.2112.0
benchmark_results/reranker_refinment_v1/: benchmark_final (1).ipynb  generative_comparison_results.csv  h100_benchmark_results (2).csv
benchmark_results/together/: h100_benchmark_results.csv
latest_results/: generative_comparison_results.csv  generative_comparison_results_judged.csv  reranker_Base_score.txt
src/: compare_approaches.py  embeddings.py  retrieval.py  simple_agent.py  vector_store.py  visualize_results.py
src/insurance_rag_qdrant.egg-info/: PKG-INFO  top_level.txt
