[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "insurance-rag-qdrant"
version = "0.1.0"
description = "RAG prototype for insurance QA with Qdrant and Giga Embeddings"
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "qdrant-client>=1.9.0",
  "transformers>=4.45.0",
  "accelerate>=0.34.0",
  "sentencepiece>=0.1.99",
  "torch>=2.1.0",
  "numpy>=1.24.0",
  "tqdm>=4.66.0",
  "pytest>=8.0.0"
]

[project.optional-dependencies]
cpu = ["torch==2.1.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
